<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="5sp"
        android:text="@string/not_connected" />

    <Button
        android:id="@+id/not_established"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_established" />
    
    <Button
        android:id="@+id/established"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/established" />
   
    <Button
        android:id="@+id/moving"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/moving" />
    
    <Button
        android:id="@+id/idling"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/idling" />

    <TextView
        android:id="@+id/versionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="5sp"
        android:text="@string/version" />
    
</LinearLayout>